--- a/style.css
+++ b/style.css
@@ -1052,6 +1052,9 @@ footer span a:hover{
         padding-left: 10px;
         margin: 10px 0;
     } */
+     .contact .right form {
+        margin-left: 10px;
+    }
 }
 
 @media(max-width:500px){
@@ -1162,6 +1165,9 @@ footer span a:hover{
         margin-left: 0;
         margin-top: 10px; 
     } */
+     .contact .right form {
+        margin-left: 10px;
+    }
 }
 
 @media(max-width:411px){
