--- a/style.css
+++ b/style.css
@@ -814,9 +814,11 @@ section{
 footer{
     font-family: 'Poppins',sans-serif;
     background: #000;
-    padding: 20px 23px;
+    padding: 20px 21px;
     color: #fff;
     text-align: center;
+    width:100%;
+    overflow:none;
 }
 footer span a{
     color: crimson;
