--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@
  
 }
 
+#particles-js {
+    height: 100vh;
+    width: 100%;
+    /* background: #000; */
+}
+
+
+
 html{
     scroll-behavior: smooth;
 }
